tests/golden/type_errors/named_struct_extra_field.cd
struct Person { name: string, age: number }
let p: Person = { name: "Ada", age: 36, title: "Dr" };
